Bug 480788 - kwin_wayland crashes when using arrow keys to move through results in multimonitor set-up
Summary: kwin_wayland crashes when using arrow keys to move through results in multimo...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (show other bugs)
Version: master
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-03 17:15 UTC by fanzhuyifan
Modified: 2024-02-09 09:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
gdb backtrace (111.54 KB, text/x-log)
2024-02-03 17:43 UTC, fanzhuyifan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fanzhuyifan 2024-02-03 17:15:50 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. toggle overview in multimonitor setup
2. search for something that gives results
3. On one monitor, spam down arrow to quickly cycle through results
4. use left/right arrow to move to other monitor
5. spam down arrow again to quickly cycle through results

OBSERVED RESULT
kwin crashes

EXPECTED RESULT
kwin does not crash

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.1
Kernel Version: 6.5.0-15-generic (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i9-13900H
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus G16 GU603VV_GU603VV
System Version: 1.0

ADDITIONAL INFORMATION
Comment 1 fanzhuyifan 2024-02-03 17:43:48 UTC
Created attachment 165504 [details]
gdb backtrace
Comment 2 Marco Martin 2024-02-05 15:43:22 UTC
pasting inline

#0  0x0000763f69284ce8 in QQuickWindowPrivate::deliveryAgentPrivate (this=0xb1) at /usr/src/debug/qt6-declarative/qtdeclarative-everywhere-src-6.7.0-beta2/src/quick/items/qquickwindow_p.h:118
#1  QQuickWindow::activeFocusItem (this=0x56c6d8762760) at /usr/src/debug/qt6-declarative/qtdeclarative-everywhere-src-6.7.0-beta2/src/quick/items/qquickwindow.cpp:1336
        d = 0xb1
        da = <optimized out>
#2  0x0000763f69b40ea9 in operator()<std::pair<KWin::Output* const, std::unique_ptr<KWin::QuickSceneView> > > (__closure=<synthetic pointer>, view={...}) at /home/yifan/kde/src/kwin/src/effect/quickeffect.cpp:290
#3  __gnu_cxx::__ops::_Iter_pred<KWin::QuickSceneEffect::activeView() const::<lambda(const auto:61&)> >::operator()<std::_Rb_tree_iterator<std::pair<KWin::Output* const, std::unique_ptr<KWin::QuickSceneView> > > > (__it=Python Exception <class 'gdb.error'>: value has been optimized out
, this=<synthetic pointer>) at /usr/include/c++/13.2.1/bits/predefined_ops.h:318
#4  std::__find_if<std::_Rb_tree_iterator<std::pair<KWin::Output* const, std::unique_ptr<KWin::QuickSceneView> > >, __gnu_cxx::__ops::_Iter_pred<KWin::QuickSceneEffect::activeView() const::<lambda(const auto:61&)> > > (__pred=..., __last=Python Exception <class 'gdb.error'>: value has been optimized out
, __first={...}) at /usr/include/c++/13.2.1/bits/stl_algobase.h:2055
#5  std::__find_if<std::_Rb_tree_iterator<std::pair<KWin::Output* const, std::unique_ptr<KWin::QuickSceneView> > >, __gnu_cxx::__ops::_Iter_pred<KWin::QuickSceneEffect::activeView() const::<lambda(const auto:61&)> > > (__pred=..., __last=Python Exception <class 'gdb.error'>: value has been optimized out
, __first=Python Exception <class 'gdb.error'>: value has been optimized out
) at /usr/include/c++/13.2.1/bits/stl_algobase.h:2117
#6  std::find_if<std::_Rb_tree_iterator<std::pair<KWin::Output* const, std::unique_ptr<KWin::QuickSceneView> > >, KWin::QuickSceneEffect::activeView() const::<lambda(const auto:61&)> > (__pred=..., __last=Python Exception <class 'gdb.error'>: value has been optimized out
, __first=Python Exception <class 'gdb.error'>: value has been optimized out
) at /usr/include/c++/13.2.1/bits/stl_algo.h:3923
#7  KWin::QuickSceneEffect::activeView (this=this@entry=0x56c6d6fdd7c0) at /home/yifan/kde/src/kwin/src/effect/quickeffect.cpp:289
        it = Python Exception <class 'gdb.error'>: value has been optimized out

#8  0x0000763f69b4368f in KWin::QuickSceneEffect::grabbedKeyboardEvent (this=0x56c6d6fdd7c0, keyEvent=0x7ffee2306f10) at /home/yifan/kde/src/kwin/src/effect/quickeffect.cpp:561
        screenView = <optimized out>
#9  0x0000763f69b66d8c in KWin::EffectsFilter::keyEvent (event=0x7ffee2306f10, this=0x56c6d70f44d0) at /home/yifan/kde/src/kwin/src/input.cpp:532
#10 KWin::EffectsFilter::keyEvent (this=0x56c6d70f44d0, event=0x7ffee2306f10) at /home/yifan/kde/src/kwin/src/input.cpp:525
#11 0x0000763f69b7d4d7 in std::__invoke_impl<bool, bool (KWin::InputEventFilter::*&)(KWin::KeyEvent*), KWin::InputEventFilter* const&, KWin::KeyEvent*&> (__f=<optimized out>, __t=@0x56c6d70fc6f0: 0x56c6d70f44d0) at /usr/include/c++/13.2.1/bits/invoke.h:74
#12 std::__invoke<bool (KWin::InputEventFilter::*&)(KWin::KeyEvent*), KWin::InputEventFilter* const&, KWin::KeyEvent*&> (__fn=<optimized out>) at /usr/include/c++/13.2.1/bits/invoke.h:96
#13 std::_Bind<bool (KWin::InputEventFilter::*(std::_Placeholder<1>, KWin::KeyEvent*))(KWin::KeyEvent*)>::__call<bool, KWin::InputEventFilter* const&, 0ul, 1ul>(std::tuple<KWin::InputEventFilter* const&>&&, std::_Index_tuple<0ul, 1ul>) (__args=<optimized out>, this=<optimized out>) at /usr/include/c++/13.2.1/functional:506
#14 std::_Bind<bool (KWin::InputEventFilter::*(std::_Placeholder<1>, KWin::KeyEvent*))(KWin::KeyEvent*)>::operator()<KWin::InputEventFilter* const&, bool>(KWin::InputEventFilter* const&) (this=<optimized out>) at /usr/include/c++/13.2.1/functional:591
#15 __gnu_cxx::__ops::_Iter_pred<std::_Bind<bool (KWin::InputEventFilter::*(std::_Placeholder<1>, KWin::KeyEvent*))(KWin::KeyEvent*)> >::operator()<QList<KWin::InputEventFilter*>::const_iterator>(QList<KWin::InputEventFilter*>::const_iterator) (__it=..., this=<optimized out>) at /usr/include/c++/13.2.1/bits/predefined_ops.h:318
#16 std::__find_if<QList<KWin::InputEventFilter*>::const_iterator, __gnu_cxx::__ops::_Iter_pred<std::_Bind<bool (KWin::InputEventFilter::*(std::_Placeholder<1>, KWin::KeyEvent*))(KWin::KeyEvent*)> > >(QList<KWin::InputEventFilter*>::const_iterator, QList<KWin::InputEventFilter*>::const_iterator, __gnu_cxx::__ops::_Iter_pred<std::_Bind<bool (KWin::InputEventFilter::*(std::_Placeholder<1>, KWin::KeyEvent*))(KWin::KeyEvent*)> >, std::random_access_iterator_tag) (__pred=..., __last=..., __first=...) at /usr/include/c++/13.2.1/bits/stl_algobase.h:2072
Comment 3 Nate Graham 2024-02-05 21:05:32 UTC
Can reproduce.
Comment 4 Bug Janitor Service 2024-02-09 09:03:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5155
Comment 5 Vlad Zahorodnii 2024-02-09 09:18:54 UTC
Git commit 95d4671a10904bf58e9ab23172766de450386640 by Vlad Zahorodnii, on behalf of David Edmundson.
Committed on 09/02/2024 at 09:12.
Pushed by davidedmundson into branch 'master'.

quickeffect: Avoid double delete of QQuickViews

Views are owned by the C++ backend, but also retrievable by invokables
to get neighbouring screens from JS space. By default Qt then transfers
ownership of the view to the QML collector. This results in double
ownership.

M  +2    -0    src/effect/quickeffect.cpp

https://invent.kde.org/plasma/kwin/-/commit/95d4671a10904bf58e9ab23172766de450386640
Comment 6 David Edmundson 2024-02-09 09:28:52 UTC
Git commit 8b73147fa96831b4f07b32f4550d4324db0c5be3 by David Edmundson.
Committed on 09/02/2024 at 09:19.
Pushed by davidedmundson into branch 'Plasma/6.0'.

quickeffect: Avoid double delete of QQuickViews

Views are owned by the C++ backend, but also retrievable by invokables
to get neighbouring screens from JS space. By default Qt then transfers
ownership of the view to the QML collector. This results in double
ownership.


(cherry picked from commit 95d4671a10904bf58e9ab23172766de450386640)

M  +2    -0    src/effect/quickeffect.cpp

https://invent.kde.org/plasma/kwin/-/commit/8b73147fa96831b4f07b32f4550d4324db0c5be3